# eo-vae

./: .gitignore  LICENSE  README.md  benchmark_compute.py  compare_weight_distill.py  compute_stats.py  datamodule.py  encode_latents.py  encode_latents_geobench.py  encode_latents_sen12ms.py  eval_cloud_removal.py  eval_metric_super_res.py  eval_sen12ms_reconstruction.py  eval_viz_super_res.py  eval_viz_tokenizer.py  evaluate_metrics_tokenizer.py  generate_benchmark_table.py  generate_combined_results.py  generate_table_sr.py  metric_eval.py  paper_tables.py  pyproject.toml  reconstruct.py  test.py  train.py  train_linear_probe.py  train_refiner.py  train_ssdd.py  train_super_res.py  visual_eval.py  visualize_histogram.py  weight_distill_train.py
configs/: eo-vavae.yaml  finetune_consistency.yaml  finetune_consistency_bases.yaml  finetune_consistency_factor.yaml  finetune_dyn_conv_rgb.yaml  finetune_refine_consistency.yaml  seasonet.yaml  ssdd.yaml  test_config.yaml  weight_distill.yaml
configs_superres/: eo_vae_latent.yaml  flux_vae_latent.yaml  pixel.yaml  sen12ms_cr_latent.yaml
eo_vae/datasets/: __init__.py  any_sensor_datamodule.py  combined_datamodule.py  compute_stats.py  eodataset.py  geobench_latent.py  inspect_terramesh.py  satlas_naip.py  sen12ms_cr_dataset.py  sen12ms_latent.py  sen2naip.py  terramesh.py  terramesh_datamodule copy.py  terramesh_datamodule.py
eo_vae/models/: __init__.py  autoencoder.py  autoencoder_flux.py  dofa.py  flow_refiner.py  linear_probe.py  model.py  new_autoencoder.py  refiner.py  ssdd.py  super_res.py
eo_vae/models/modules/: __init__.py  consistency_loss.py  deco_refiner.py  diffusion_dyn_conv.py  dinov3_wrapper.py  distributions.py  dynamic_basis.py  dynamic_conv.py  embeddings.py  ffl.py  flow_refiner.py  layers.py  loss_functions.py  loss_utils.py  multi_stage_dynamic_conv.py  ssdd_dyn_conv.py  uvit.py  uvit_activations.py  (+7 more)
eo_vae/utils/: callbacks.py  hypernet_init_weights.py  image_logger.py  latent_encoding.py  utils.py
src/datasets/: __init__.py  any_sensor_datamodule.py  eodataset.py
src/models/: __init__.py  autoencoder.py  decoder_dconv_weight_generator_init_0.01_er50k.pt  dynamic_conv.py  encoder_dconv_weight_generator_init_0.01_er50k.pt  model.py
src/utils/: hypernet_init_weights.py
tests/: test_model.py
(+6 files in other folders)
