[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EO-VAE"
version = "0.1.0"
description = "EO-VAE."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Nils Lehmann", email = "n.lehmann@tum.de" },
]

maintainers = [
    { name = "Nils Lehmann", email = "n.lehmann@tum.de" },
]


dependencies = [
    "torchgeo",
    "wandb",
    "ruff",
    "python-dotenv",
    "omegaconf",
    "hydra-core",
]


[tool.ruff]
extend-include = ["*.ipynb"]
fix = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["ANN", "D", "I", "RUF", "UP"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["ANN", "D"]
"experiments/**" = ["D"]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["eo_vae*"]
